--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -9,3 +9,4 @@
 
 <%= link_to "Edit this todo", edit_todo_path(@todo) %> |
 <%= link_to "Back to todos listing", todos_path %>
+<%= link_to "Back to todos listing", todos_url %>
